crates/zizmor/tests/integration/snapshots/integration__snapshot__cache_poisoning-14.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 560
expression: "zizmor().input(input_under_test(\"cache-poisoning/issue-378-repro.yml\")).run()?"
---
No findings to report. Good job! (2 suppressed)
