crates/zizmor/tests/integration/snapshots/integration__snapshot__cache_poisoning-3.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 482
expression: "zizmor().input(input_under_test(\"cache-poisoning/caching-opt-in-boolean-toggle.yml\")).run()?"
---
error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:19:9
   |
 1 |   on: release
   |   ----------- generally used when publishing artifacts generated at runtime
...
19 | /         with:
20 | |           dotnet-version: "5.0.x"
21 | |           cache: true
   | |_____________________^ opt-in for caching here
   |
   = note: audit confidence → Low
   = note: this finding has an auto-fix

4 findings (3 suppressed, 1 fixable): 0 informational, 0 low, 0 medium, 1 high
