crates/zizmor/tests/integration/snapshots/integration__snapshot__cache_poisoning-4.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 490
expression: "zizmor().input(input_under_test(\"cache-poisoning/caching-opt-in-expression.yml\")).run()?"
---
error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:19:9
   |
 1 |   on: release
   |   ----------- generally used when publishing artifacts generated at runtime
...
19 | /         with:
20 | |           python-version: "3.12"
21 | |           enable-cache: ${{ github.ref == 'refs/heads/main' }}
   | |______________________________________________________________^ opt-in for caching might happen here
   |
   = note: audit confidence → Low
   = note: this finding has an auto-fix

4 findings (1 ignored, 2 suppressed, 1 fixable): 0 informational, 0 low, 0 medium, 1 high
