crates/zizmor/tests/integration/snapshots/integration__snapshot__cache_poisoning-5.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"cache-poisoning/caching-opt-in-multi-value-toggle.yml\")).run()?"
snapshot_kind: text
---
error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:1:1
   |
 1 |   on: release
   |   ^^^^^^^^^^^ generally used when publishing artifacts generated at runtime
 2 |
...
18 |           uses: actions/setup-java@8df1039502a15bceb9433410b1a100fbe190c53b
19 | /         with:
20 | |           distribution: "zulu"
21 | |           cache: "gradle"
22 | |           java-version: "17"
   | |____________________________^ opt-in for caching here
   |
   = note: audit confidence → Low

1 finding: 0 unknown, 0 informational, 0 low, 0 medium, 1 high
