crates/zizmor/tests/integration/snapshots/integration__snapshot__cache_poisoning-7.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 512
expression: "zizmor().input(input_under_test(\"cache-poisoning/no-cache-aware-steps.yml\")).run()?"
---
No findings to report. Good job! (1 ignored, 3 suppressed)
