crates/zizmor/tests/integration/snapshots/integration__snapshot__cache_poisoning-9.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"cache-poisoning/caching-opt-in-boolish-toggle.yml\")).run()?"
---
error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:18:9
   |
 4 |   on: release
   |   ----------- generally used when publishing artifacts generated at runtime
...
18 | /         with:
19 | |           target: ${{ matrix.platform.target }}
20 | |           args: --release --out dist
21 | |           sccache: "true"
   | |__________________________^ opt-in for caching here
   |
   = note: audit confidence → Low
help: this finding has an auto-fix

1 findings (1 fixable): 0 unknown, 0 informational, 0 low, 0 medium, 1 high
